--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^6.7.1",
-    "webpack": "^5.74.0",
+    "css-loader": "^6.7.1"
+  },
+  "dependencies": {
+    "style-loader": "^3.3.1",
+    "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   },
-  "dependencies": {},
   "description": ""
 }
